Fix minor styling issue
Moved the number boxes to cover the native html numbers

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ transition: box-shadow 0.5s;
 
 .list-type5 ol li:before {
 position: absolute;
-top: -0.3em;
-left: -0.5em;
+top: -0.2em;
+left: -1em;
 width: 1.8em;
 height: 1.2em;
 font-size: 2em;
